// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGridItem renders correctly with a child 1`] = `
<section
  data-testid="menu-grid-item"
  onBlur={[Function]}
  onFocus={[Function]}
  role="grid"
  tabIndex={-1}
>
  <div
    disabled={false}
  >
    Hello!
  </div>
</section>
`;

exports[`MenuGridItem renders correctly with a disabled child 1`] = `
<section
  data-testid="menu-grid-item"
  onBlur={[Function]}
  onFocus={[Function]}
  role="grid"
  tabIndex={-1}
>
  <div
    disabled={true}
  >
    this should be disabled
  </div>
</section>
`;
